ローカルのアーティストが削除されていたらお気に入りから削除する